<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="mediatek_policy">Vmed is designed as a guideline for personal health and exercise. It is strictly NOT to be used for medical evaluation.
		\nBy clicking "Continue", you agree to the Vmed
    <a href="com.mediatek.webView:///android_asset/htmls/terms_conditions_EN.html">Terms &amp; Conditions</a> and
		<a href="com.mediatek.webView:///android_asset/htmls/privacy_policy_EN.html">Privacy Policy</a>.</string>
    <string name="mediatek_policy_about">
    <a href="com.mediatek.webView:///android_asset/htmls/terms_conditions_EN.html">Terms &amp; Conditions</a> and
		<a href="com.mediatek.webView:///android_asset/htmls/privacy_policy_EN.html">Privacy Policy</a></string>
    <string name="measure_ready_subtitle">Place your fingertips on the two sensor areas \nIf you wish to hold the phone horizontally, please turn it counterclockwise.</string>
    <string name="fatigue_index_wrap">Fatigue\nIndex</string>
    <string name="pressure_index_wrap">Pressure\nIndex</string>
    <string name="input_golden">Input your known data</string>
    <string name="measure_ready_subtitle_horizontal">Place your fingertips on the two sensor areas \n\nPlease make sure the cameras are on the left side.</string>
    <string name="no_data">We\'ve got no data!</string>
    <string name="no_chart_data">We\'ve got no chart data!</string>
    <string name="screening_education_content">Electrocardiography (ECG) is the process of recording the electrical activity of the heart over a period of time using electrodes placed on the skin. These electrodes detect the tiny electrical changes on the skin that arise from the heart muscle\'s electrophysiologic pattern during each heartbeat. An ECG can be used to measure the rate and rhythm of heartbeats, the size and position of the heart chambers.</string>
    <string name="measure_status_measure">Please wait, we\'re measuring your stats!</string>
    <string name="test_throughput_error">Oh dear! We\'ve failed to test throughput correctly</string>
    <string name="error_network_maybe_unavailable">Can\'t connect to server</string>
    <string name="empty_value">--</string>
    <string name="empty_value_pair">--/--</string>
    <string name="spo2_education_content">SpO2 is an estimated value of blood oxygen level, which is normally between 95%% &#126; 100%%. When the SpO2 value is too low, this can imply respiratory or circulation system issues.</string>
    <string name="calibrate_success_to_calibrate">Hi %1$s.\nCalibration is complete and the data saved into your personal file.\nDo you want to try calibration again?</string>
    <string name="calibrate_success_to_measure">Hi %1$s.\nYou\'ve completed calibration.\nYour future measurements will use this personal calibration data.\nNext, lets try taking some health measurements</string>
    <string name="validate_number_range_invalid">Please add a value between [%1$d - %2$d]</string>
    <string name="app_version">v%1$s</string>
    <string name="all_version">%1$s, %2$s, %3$s, %4$s, %5$s</string>
    <string name="throughput_warning_formatter">Throughput is %1$.2f Kb/s.\n
  Your device is far away from phone or the environment is poor, Recommend that move the device closer.</string>
    <string name="measure_result_info">Hi %1$s,\nComparison data is generated based on people of same gender, age and BMI</string>
    <string name="abnormal_formatter">%1$d%%</string>
    <string name="screening_error_formatter">Fail to loadData (%1$s) - touch to retry</string>
    <string name="load_more_error">Fail to loadData (%1$s) - touch to retry</string>
    <string name="error_network_unexpected">An unexpected error has occurred (%1$s)</string>
    <string name="wave_form_duration" formatted="false">%1$.2f&#126;%2$.2fs</string>
    <string name="blood_pressure_formatter">%1$d/%2$d</string>
    <string name="error_scan_fail">Failed to start scan(%1$s)</string>
    <string name="error_peripheral_communicate">Failed to communicate with device(%1$s)</string>
    <string name="error_peripheral_connect">Failed to connect with device(%1$s)</string>
    <string name="error_peripheral_disconnect">Failed to disconnect with device(%1$s)</string>
    <string name="error_throughput">Test throughput error(%1$s)</string>
    <string name="percentage_formatter">%1$d/100</string>
    <string name="percentage_formatter_abbr">%1$d%%</string>
    <string name="formatter_downloading">Downloading %1$.1f%%</string>
    <string name="formatter_installing">Installing %1$.1f%%</string>
    <string name="formatter_firmware_available">(%1$s is available)</string>
    <string name="app_name">Vmed</string>
    <string name="measure">Measure</string>
    <string name="health_journal">Health History</string>
    <string name="screening">Health Weather</string>
    <string name="consulting">Consulting</string>
    <string name="ranking">Ranking</string>
    <string name="health_report">Marketplace</string>
    <string name="exercise">Exercise</string>
    <string name="daily_diet">Daily Diet</string>
    <string name="health_weather_label">Health Weather</string>
    <string name="marketplace_label">Marketplace</string>
    <string name="exercise_view_label">Exercise</string>
    <string name="daily_diet_label">Daily Diet</string>
    <string name="measures_6_health_readings_in_60_seconds">Measure 10 health stats in 10-60 seconds</string>
    <string name="measure_ready_title">Ready to Measure</string>
    <string name="waveform">Waveform</string>
    <string name="heart_rate_title">Heart Rate</string>
    <string name="blood_pressure_title">Blood Pressure</string>
    <string name="blood_pressure_title_ab">BP</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="cancel_measure_tips">Are you sure you want to cancel?</string>
    <string name="measure_interrupt_no">No</string>
    <string name="measure_interrupt_yes">Yes</string>
    <string name="measure_interrupt_title">Measurement stopped</string>
    <string name="measure_interrupt_msg">An accurate reading cannot be recorded. Please replace your fingertips on the correct areas.</string>
    <string name="bp_measure_exception_title">Measurement Error</string>
    <string name="bp_measure_exception_msg">Blood Pressure result: %1$s.\n\nTry again?</string>
    <string name="bad_signal_tips">An accurate reading cannot be recorded. Please place your fingertips on the correct areas. Try again?</string>
    <string name="status_title">Progress</string>
    <string name="heart_rate_title_ab">Heart Rate</string>
    <string name="heart_rate_variability">Heart Rate Variability</string>
    <string name="ppg_title">PPG</string>
    <string name="ppg2_title">PPG2</string>
    <string name="ecg_title">ECG</string>
    <string name="bpm_text">bpm</string>
    <string name="mmhg_text">mmHg</string>
    <string name="measure_result">Measurement Result</string>
    <string name="systolic_title">Systolic</string>
    <string name="diastolic_title">Diastolic</string>
    <string name="spo2_title">SpO2</string>
    <string name="brv_title">BR</string>
    <string name="temp_title">Temperature</string>
    <string name="temp_string_data">Not measured</string>
    <string name="default_no_measure">Not measured</string>
    <string name="fatigue_index">Fatigue Index</string>
    <string name="pressure_index">Pressure Index</string>
    <string name="fatigue">Fatigue</string>
    <string name="pressure">Pressure</string>
    <string name="nav_calibrate1">If this result looks inaccurate please click to calibrate, </string>
    <string name="nav_calibrate2">aligning the settings to you.</string>
    <string name="normal">&#60;10</string>
    <string name="abnormal">&#62;10</string>
    <string name="input_golden_again">Input your known data again</string>
    <string name="ready_to_calibration">Ready to Calibrate</string>
    <string name="cancel_calibrate">Are you sure to cancel calibration?</string>
    <string name="calibrate_interrupted">Calibration stopped</string>
    <string name="calibrate_error">An accurate reading cannot be recorded. Please place your fingertips on the correct areas. Try again?</string>
    <string name="success_tips">Success!</string>
    <string name="hr_spo2">Heart Rate / SpO2</string>
    <string name="hrv">Heart Rate Variability</string>
    <string name="brv">Breathing Rate</string>
    <string name="bp">Blood Pressure</string>
    <string name="local_temp">Guest Temperature Records</string>
    <string name="offline_record">Guest Measure Records</string>
    <string name="measure_record">Your Records</string>
    <string name="normal_area">Normal Area</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="high">high</string>
    <string name="low">low</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="loading">Loading…</string>
    <string name="invalid_value">Please add a value</string>
    <string name="validate_required_invalid">Please add a value</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>
    <string name="again">Again</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="height_title">Height</string>
    <string name="unit_cm">cm</string>
    <string name="weight_title">Weight</string>
    <string name="profile_text">Profile</string>
    <string name="connect_internet_tips">Please connect to the internet for further analysis</string>
    <string name="sign_in">Sign In</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign out</string>
    <string name="nick_name">Name</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="birthday">Birthday</string>
    <string name="weight">Weight</string>
    <string name="photo">Photo</string>
    <string name="complete">Complete</string>
    <string name="password_find">Forget password</string>
    <string name="password_reset">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="newpd_hint">Please input your new password</string>
    <string name="conpd_hint">Please confirm to input the new password</string>
    <string name="app_default"></string>
    <string name="latest_version">It is currently the latest version!</string>
    <string name="version_check">Check new version</string>
    <string name="str_checking">Checking...</string>
    <string name="mediatek_logo">Vmed Logo</string>
    <string name="string_temp">Temperature</string>
    <string name="string_localtemp">Guest Temperature Record</string>
    <string name="profile">Profile</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="about">About</string>
    <string name="heart_rate_risk">% of Irregular Heart Activity</string>
    <string name="create_an_account">Create Account</string>
    <string name="i_am_a_guest">Offline Mode</string>
    <string name="continue_sign_in">Continue</string>
    <string name="hint_account">At least 4 Characters</string>
    <string name="hint_password">At least 8 Characters</string>
    <string name="hint_maccount">Phone number/Email account</string>
    <string name="hint_mpassword">Please enter your password</string>
    <string name="hint_vertification">Enter verification code</string>
    <string name="ver_text">Get verification code</string>
    <string name="version">Version</string>
    <string name="downgrade">Downgrade</string>
    <string name="upgrade">Upgrade</string>
    <string name="create_account">Create Account</string>
</resources>