<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <TextView
    android:id="@+id/action_power"
    android:orderInCategory="100"
    android:text="100"
    app:showAsAction="always"/>

  <item
      android:id="@+id/action_profile"
      android:icon="@drawable/btn_home_user_profile"
      android:orderInCategory="100"
      android:title="@string/profile"
      app:showAsAction="always"/>

  <item
      android:id="@+id/action_bluetooth"
      android:icon="@drawable/btn_home_device_disconnected"
      android:orderInCategory="100"
      android:title="@string/bluetooth"
      app:showAsAction="always"/>

  <item
      android:id="@+id/action_about"
      android:orderInCategory="100"
      android:title="@string/about"
      app:showAsAction="never"/>

  <item
      android:id="@+id/action_downgrade"
      android:orderInCategory="100"
      android:title="@string/downgrade"
      app:showAsAction="never"/>

  <item
      android:id="@+id/action_upgrade"
      android:orderInCategory="100"
      android:title="@string/upgrade"
      app:showAsAction="never"/>
  <!--krestin remove calibration menu start-->
  <!--<item
      android:id="@+id/action_delete_calibration"
      android:orderInCategory="100"
      android:title="@string/delete_calibration"
      app:showAsAction="never"/>-->
  <!--krestin remove calibration menu start-->

  <item
      android:id="@+id/action_create_account"
      android:orderInCategory="100"
      android:title="@string/create_account"
      app:showAsAction="never"/>

  <item
      android:id="@+id/action_sign_out"
      android:orderInCategory="100"
      android:title="@string/sign_out"
      app:showAsAction="never"/>




</menu>
