<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin_4"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:divider="@drawable/divider_vertical"
      android:orientation="vertical"
      android:showDividers="middle"
      >
    <TextView
        android:id="@+id/hr_spo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/icon_chevron_right"
        android:drawableStart="@drawable/icon_list_hr"
        android:text="@string/hr_spo2"
        style="@style/FormLabel.ListItem"
        />
    <TextView
        android:id="@+id/hrv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/icon_chevron_right"
        android:drawableStart="@drawable/icon_list_hrv"
        android:text="@string/hrv"
        style="@style/FormLabel.ListItem"
        />
    <TextView
        android:id="@+id/brv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/icon_chevron_right"
        android:drawableStart="@drawable/icon_list_brv"
        android:text="@string/brv"
        style="@style/FormLabel.ListItem"
        />
    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/icon_chevron_right"
        android:drawableStart="@drawable/icon_list_temp"
        android:text="@string/string_temp"
        style="@style/FormLabel.ListItem"
        />
    <TextView
        android:id="@+id/bp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/icon_chevron_right"
        android:drawableStart="@drawable/icon_list_bp"
        android:text="@string/bp"
        style="@style/FormLabel.ListItem"
        />
    <TextView
        android:id="@+id/local_temp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/icon_chevron_right"
        android:drawableStart="@drawable/icon_list_hrv"
        android:text="@string/string_localtemp"
        style="@style/FormLabel.ListItem"
        />
    <TextView
        android:id="@+id/measure_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/icon_chevron_right"
        android:drawableStart="@drawable/icon_list_measurement_records"
        android:text="@string/measure_record"
        style="@style/FormLabel.ListItem"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/icon_chevron_right"
        android:drawableStart="@drawable/icon_list_bp"
        android:text="@string/measure_record"
        android:visibility="invisible"
        style="@style/FormLabel.ListItem"
        />
  </LinearLayout>

</LinearLayout>