<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_pending"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="4"
      android:gravity="bottom|center"
      android:orientation="vertical"
      >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mediatek_logo"
        android:src="@drawable/logo"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mediatek_logo"
        android:src="@drawable/logo_mediatek_sensio2"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="5"
      android:gravity="bottom|center"
      android:orientation="vertical"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/btn_sign_in"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/sign_in"
          />
      <View
          android:layout_width="16dp"
          android:layout_height="1dp"
          />
      <Button
          android:id="@+id/btn_create_an_account"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/create_an_account"
          style="@style/MButton.Inverse"
          />
    </LinearLayout>
    <Button
        android:id="@+id/txt_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/i_am_a_guest"
        style="@style/MButton.Inverse"
        />
    <TextView
        android:id="@+id/txt_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/mediatek_policy"
        android:textColorLink="?android:attr/textColorPrimary"

        />

  </LinearLayout>
</LinearLayout>